--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,71 @@ h1, h2 {
     float: left;
     font-size: 280%;
 }
+
+/* nav links */ 
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height: 75px;
+
+}
+
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;   
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+#zlatan-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#zlatan-image {
+    height: 600px;
+    width: 100%;
+    background: url('../css/images/picture1.jpg') no-repeat center center;
+
+    /* animates zoom effect on loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* creates the level of zoom for zlatan image */
+@keyframes hero-zoom {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
+}
+
+
+
+
+
+
+
+
+
